--- a/Pokedex/Favorites/Favorites.storyboard
+++ b/Pokedex/Favorites/Favorites.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="117" width="390" height="717"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JeD-aU-e5Q">
-                                        <rect key="frame" x="0.0" y="15" width="390" height="612"/>
+                                        <rect key="frame" x="10" y="15" width="370" height="612"/>
                                         <color key="backgroundColor" red="0.54901963470000004" green="0.83137255909999996" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Xrj-3i-dEA">
                                             <size key="itemSize" width="128" height="128"/>
@@ -34,8 +34,8 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.5474519175" green="0.83142414239999995" blue="0.95929333120000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstItem="JeD-aU-e5Q" firstAttribute="leading" secondItem="foa-MM-MaP" secondAttribute="leading" id="1uY-aM-rPZ"/>
-                                    <constraint firstAttribute="trailing" secondItem="JeD-aU-e5Q" secondAttribute="trailing" id="LhF-vP-BY6"/>
+                                    <constraint firstItem="JeD-aU-e5Q" firstAttribute="leading" secondItem="foa-MM-MaP" secondAttribute="leading" constant="10" id="1uY-aM-rPZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="JeD-aU-e5Q" secondAttribute="trailing" constant="10" id="LhF-vP-BY6"/>
                                     <constraint firstAttribute="bottom" secondItem="JeD-aU-e5Q" secondAttribute="bottom" constant="90" id="cAQ-DY-Ien"/>
                                     <constraint firstItem="JeD-aU-e5Q" firstAttribute="top" secondItem="foa-MM-MaP" secondAttribute="top" constant="15" id="iAC-FT-8GA"/>
                                 </constraints>
