Refizemos os Alerts

--- a/Pokedex/ForgotPassword/ForgotPasswordStoryboard.storyboard
+++ b/Pokedex/ForgotPassword/ForgotPasswordStoryboard.storyboard
@@ -58,7 +58,7 @@
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Digite seu email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Qp-30-jCv">
                                 <rect key="frame" x="30" y="303" width="330" height="18.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                             </textField>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgPlanoDeFundo" translatesAutoresizingMaskIntoConstraints="NO" id="q1U-4D-wQf">
                                 <rect key="frame" x="0.0" y="716" width="390" height="128"/>
