--- a/Pokedex/Profile/profileStoryboard.storyboard
+++ b/Pokedex/Profile/profileStoryboard.storyboard
@@ -88,7 +88,7 @@
                                             <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="tappedDeleteAccountButton:" destination="X0A-1L-eLe" eventType="touchUpInside" id="9c7-cp-aGK"/>
+                                            <action selector="tappedDeleteAccountButton:" destination="X0A-1L-eLe" eventType="touchUpInside" id="8TT-Q2-ERP"/>
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgPlanoDeFundo" translatesAutoresizingMaskIntoConstraints="NO" id="WRC-6R-eLX">
@@ -190,7 +190,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tGv-nF-cYg" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="723.1884057971015" y="66.964285714285708"/>
+            <point key="canvasLocation" x="5" y="48"/>
         </scene>
     </scenes>
     <resources>
