--- a/Pokedex/Main.storyboard
+++ b/Pokedex/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iEh-2R-FaO">
-                                <rect key="frame" x="10" y="161" width="394" height="616"/>
+                                <rect key="frame" x="10" y="117" width="394" height="660"/>
                                 <color key="backgroundColor" systemColor="systemCyanColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jJb-sc-CTV">
                                     <size key="itemSize" width="128" height="128"/>
@@ -29,12 +29,12 @@
                                 <cells/>
                             </collectionView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pesquisar" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8pd-RD-IIF">
-                                <rect key="frame" x="35" y="107" width="271" height="34"/>
+                                <rect key="frame" x="35" y="63" width="271" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZAr-zg-R2B">
-                                <rect key="frame" x="328" y="99" width="50" height="50"/>
+                                <rect key="frame" x="328" y="55" width="50" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="07k-aC-7wY"/>
@@ -72,52 +72,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BCm-sS-cgN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1766.6666666666667" y="79.6875"/>
+            <point key="canvasLocation" x="1412" y="485"/>
         </scene>
-        <!--Item-->
-        <scene sceneID="2ig-xt-vaI">
-            <objects>
-                <navigationController id="BsM-u7-uxX" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Eh2-tT-AIf"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="g8L-6T-TOX">
-                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="4UZ-fK-LQS" kind="relationship" relationship="rootViewController" id="Px0-Tq-bZd"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="oBm-AC-Z0F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="35" y="804"/>
-        </scene>
-        <!--FavoritesViewController-->
+        <!--FavoritesPokemonViewController-->
         <scene sceneID="8bE-LY-4O9">
             <objects>
-                <viewControllerPlaceholder storyboardName="Favorites" referencedIdentifier="FavoritesViewController" id="4UZ-fK-LQS" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Favorites" referencedIdentifier="FavoritesPokemonViewController" id="4UZ-fK-LQS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="xuZ-YJ-FP7"/>
                     <navigationItem key="navigationItem" id="koH-5v-VON"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wke-1h-lbi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="928" y="806"/>
-        </scene>
-        <!--Item-->
-        <scene sceneID="IZQ-dr-mfQ">
-            <objects>
-                <navigationController id="sHG-6P-XA4" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="pF9-Hr-08x"/>
-                    <navigationItem key="navigationItem" id="KZx-b8-qHY"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FVI-cg-MIl">
-                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="sFq-Tg-sVi" kind="relationship" relationship="rootViewController" id="daK-Wi-krW"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FgW-cg-lzk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="857" y="80"/>
+            <point key="canvasLocation" x="393" y="946"/>
         </scene>
         <!--My Tab Bar Constroller-->
         <scene sceneID="YUd-Tv-zVZ">
@@ -138,13 +104,13 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
-                        <segue destination="sHG-6P-XA4" kind="relationship" relationship="viewControllers" id="Uwu-zv-psA"/>
-                        <segue destination="BsM-u7-uxX" kind="relationship" relationship="viewControllers" id="Biq-iT-XsN"/>
+                        <segue destination="sFq-Tg-sVi" kind="relationship" relationship="viewControllers" id="JuB-9s-sbu"/>
+                        <segue destination="4UZ-fK-LQS" kind="relationship" relationship="viewControllers" id="1KT-rp-hkf"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p7p-Uk-nCY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="36" y="80"/>
+            <point key="canvasLocation" x="393" y="486"/>
         </scene>
     </scenes>
     <resources>
